--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
         <p id="noVowelResult"></p>
     </div>
 <script src="app.js"></script>
+<footer
+style="
+  color: aliceblue;
+  display: flex;
+  justify-content: end;
+  align-items: center; 
+   text-align: center; 
+  bottom: 0; 
+
+">
+<h2 id="footerh1" style="color: aliceblue;">
+  Developed © 2025<a
+    href="https://wa.me/923202059130"
+    target="_blank"
+    style="text-decoration: none">
+    Muhammad Unaid.</a>
+  All rights reserved.
+</h2>
+</footer>
     
 </body>
 </html>
